[project]
name = "repcounter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "filterpy>=1.4.5",
    "google>=3.0.0",
    "matplotlib>=3.10.9",
    "mediapipe>=0.10.35",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
